--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -214,7 +214,7 @@ body {
 
     .gallery__section {
         display: flex;
-        background-color: map-get($colors, cta__text--col );
+        background-color: #FAFAFA;
         justify-content: center;
         padding-left: 1.5rem;
         padding-right: 1.5rem;
@@ -224,7 +224,7 @@ body {
     }
     
     .gallery__title {
-        background-color: map-get($colors, cta__text--col );
+        background-color: #FAFAFA;
     }
 
 
@@ -488,7 +488,7 @@ body {
 
     .gallery__section {
         display: flex;
-        background-color: map-get($colors, cta__text--col );
+        background-color: #FAFAFA;
         justify-content: center;
         padding-left: 3rem;
         padding-right: 3rem;
@@ -497,7 +497,7 @@ body {
     
     .gallery__title {
         padding: 3rem;
-        background-color: map-get($colors, cta__text--col );
+        background-color: #FAFAFA;
         margin: 0;
     }
 
@@ -811,7 +811,7 @@ body {
 
     .gallery__section {
         display: flex;
-        background-color: map-get($colors, cta__text--col );
+        background-color: #FAFAFA;
         justify-content: center;
         padding-bottom: 3rem;
        
@@ -819,7 +819,7 @@ body {
     
     .gallery__title {
         padding:3rem;
-        background-color: map-get($colors, cta__text--col );
+        background-color: #FAFAFA;
     }
 
     .gallery__container {
@@ -867,23 +867,28 @@ body {
         line-height: 2.75rem; /*44px */
         font-weight:700;
         padding-top: 3rem;
-        padding-left: 2rem;
-        padding-right: 3.25rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
         order: 0;
-        width: 18rem; /* 340 px */
-        height: 1rem; /* 148px */
+        width: 20rem; /* 340 px */
+        height: 4rem; /* 148px */
         text-align: center;
         
+        
+    }
+
+
+    .footer__container h3 {
+        margin: .25rem;
     }
 
     .footer__socialicons { 
         display: flex;
-       
-        padding-top: 4.75rem;
+        padding-top: 5rem;
         padding-bottom: 4.75rem;
-        padding-right: 4.75rem;
+        padding-right: 5.75rem;
         order: 1;
-        width: 20rem;
+        width: 38rem;
         align-items: center;
     }
 
@@ -895,23 +900,24 @@ body {
 
     .footer__logo--container{
         order: 3;
-        margin-right: 3rem;
         width: 8rem;
         height: 2rem;
         margin-top: 5rem;
         margin-left: 3rem;
+        justify-content: right;
+        margin-bottom: 5rem;
     }
 
     .footer__title {
         order:4;
         color: #FFFFFF;
         padding-left: 3rem;
-        width: 18rem;
+        width: 17rem;
     }
 
     .footer__paragraph{
         order:5;
-        width: 18rem;
+        width: 17rem;
         text-align: left;
         padding-left: 3rem;
     }
