--- a/styles/bio.css
+++ b/styles/bio.css
@@ -431,32 +431,44 @@ body {
     padding-left: 3rem;
     width: 18rem;
   }
-  .footer__paragraph {
+  .footer__title--extended {
     order: 5;
-    width: 18rem;
-    text-align: left;
+    color: #FFFFFF;
     padding-left: 3rem;
+    width: 18rem;
   }
-  .footer__email1 {
+  .footer__paragraph {
     order: 6;
     width: 18rem;
     text-align: left;
     padding-left: 3rem;
   }
-  .footer__email2 {
+  .footer__paragraph--extended {
     order: 7;
     width: 18rem;
     text-align: left;
     padding-left: 3rem;
   }
-  .footer__email3 {
+  .footer__email1 {
     order: 8;
     width: 18rem;
     text-align: left;
     padding-left: 3rem;
   }
-  .footer_copyright {
+  .footer__email2 {
     order: 9;
+    width: 18rem;
+    text-align: left;
+    padding-left: 3rem;
+  }
+  .footer__email3 {
+    order: 10;
+    width: 18rem;
+    text-align: left;
+    padding-left: 3rem;
+  }
+  .footer_copyright {
+    order: 11;
     color: #FFFFFF;
     width: 28rem;
     text-align: left;
@@ -672,32 +684,44 @@ body {
     padding-left: 3rem;
     width: 17rem;
   }
-  .footer__paragraph {
+  .footer__title--extended {
     order: 5;
+    color: #FFFFFF;
+    padding-left: 3rem;
+    width: 36rem;
+  }
+  .footer__paragraph {
+    order: 6;
     width: 17rem;
     text-align: left;
     padding-left: 3rem;
   }
-  .footer__email1 {
-    order: 6;
-    width: 18rem;
-    text-align: left;
-    padding-left: 3rem;
-  }
-  .footer__email2 {
+  .footer__paragraph--extended {
     order: 7;
-    width: 18rem;
+    width: 27rem;
     text-align: left;
     padding-left: 3rem;
   }
-  .footer__email3 {
+  .footer__email1 {
     order: 8;
     width: 18rem;
     text-align: left;
     padding-left: 3rem;
   }
-  .footer_copyright {
+  .footer__email2 {
     order: 9;
+    width: 18rem;
+    text-align: left;
+    padding-left: 2rem;
+  }
+  .footer__email3 {
+    order: 10;
+    width: 18rem;
+    text-align: left;
+    padding-left: 2rem;
+  }
+  .footer_copyright {
+    order: 11;
     color: #FFFFFF;
     width: 28rem;
     text-align: left;
