--- a/styles/bio.css
+++ b/styles/bio.css
@@ -611,6 +611,9 @@ body {
     padding: 3rem;
     background-color: #FAFAFA;
   }
+  .gallery__title h1 {
+    font-weight: 700;
+  }
   .gallery__container {
     display: flex;
     max-width: 75rem;
