--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -835,6 +835,10 @@ body {
         background-color: #FAFAFA;
     }
 
+    .gallery__title h1{
+       font-weight: 700;
+    }
+
     .gallery__container {
         display: flex;
         max-width: 75rem;
